--- a/nav.config.yaml
+++ b/nav.config.yaml
@@ -10,7 +10,7 @@
 # 仓库地址，填写 Fork 后的仓库地址，支持 Gitee / GitHub
 # 作者 Gitee 仓库地址 https://gitee.com/xiejiahe/nav
 # gitRepoUrl: https://github.com/xjh22222228/nav
-gitRepoUrl: ttps://github.com/Snowh1te/nav
+gitRepoUrl: https://github.com/Snowh1te/nav
 # Fork 部署分支
 branch: main
 
